# software_engineering_agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  sdlc-deep-agent-spec.md  system-design.md
scripts/: demo.py
scripts/demo_fixtures/jira/: DEMO-42.json
skills/: README.md  master-agent.md  orchestrator-supervisor.md  pr-review-rubric.md  requirement-ambiguity-checklist.md  tdd-discipline.md
src/sdlc_agent/: __init__.py  config.py
src/sdlc_agent/contracts/: __init__.py  artifact.py  assignment.py
src/sdlc_agent/llm/: __init__.py  openai_client.py
src/sdlc_agent/mcp/: __init__.py  client.py  git.py  jira.py
src/sdlc_agent/memory/: __init__.py  initializer.py  paths.py  stores.py  trajectories.py
tests/: conftest.py
tests/phase0/: test_config.py  test_initializer.py  test_mcp_handshake.py  test_openai_client.py  test_scaffold.py
tests/phase1/: test_contracts.py  test_memory_stores.py  test_orchestrator_walkthrough.py  test_state_machine.py
tests/phase2/: conftest.py  test_backlog_analyzer.py  test_jira_fixture_mcp.py  test_live_openai.py  test_local_git.py  test_orchestrator_real_subagents.py  test_pr_reviewer.py
tests/phase3/: test_developer_tdd_loop.py  test_orchestrator_full_sdlc.py  test_sandbox.py
tests/phase4/: test_cross_session_learning.py  test_curation_gate.py  test_hitl_approvers.py
tests/phase5/: test_orchestrator_full_sdlc_with_skills.py  test_skill_loader.py  test_subagent_skills.py  test_subagent_trajectories.py  test_trajectory_recorder.py
tests/phase6/: test_master_agent.py  test_orchestrator_brain.py
(+19 files in other folders)
