[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlc-deep-agent"
version = "0.1.0"
description = "SDLC Deep Agent — project-scoped multi-agent system that runs the software development lifecycle"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Madaz" }]
dependencies = [
  "openai>=1.50.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
  "live: hits the real OpenAI API; requires OPENAI_API_KEY and --run-live",
]
